--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -14,7 +14,7 @@
         android:layout_marginEnd="@dimen/dp_10"
         android:text="请求"
         android:textSize="15dp"
-        app:roundBackgroundColor="#23CF2A"
+        app:roundBackgroundColor="@color/main_color"
         app:roundCornerRadius="@dimen/dp_8">
 
         <TextView
